2007-07-28  Gian Mario Tagliaretti  <gianmt@gnome.org>

	reviewed by: gjc, Fix bug #461245
	
	* gtk/gtk.override:
	(gtk_icon_theme_list_contexts)
	(gtk_icon_theme_choose_icon) Add wrappers.

2007-07-27  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gtk/gtk.override:
	(gtk_cell_layout_get_cells) Add wrapper.

	* gtk/gtk-2.12.defs:
	(gtk_entry_set_cursor_hadjustment) Allow None.

2007-07-27  Paul Pogonyshev  <pogonyshev@gmx.net>

	reviewed by: Johan, Fix bug #389777
	
	* tests/test_container.py (MyAlignment): New auxiliary widget class.
	(ContainerTest.testSuperclassForAll): New test case.

	* gtk/gtkcontainer.override (_wrap_GtkContainer__do_forall_callback)
	(_wrap_GtkContainer__do_forall): New functions.

2007-07-26  Gian Mario Tagliaretti  <gianmt@gnome.org>

	reviewed by: gjc, Fix bug #460200

	* gtk/gtk.override:
	(gtk_scale_button_new)
	(gtk_scale_button_set_icons): Add wrappers.

	* tests/test_scalebutton.py: Test the above.

	* gtk/gtk-2.12.defs:
	(gtk_buildable_add_child)
	(gtk_builder_set_translation_domain): allow None according to C docs.

2007-07-21  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gtk/gtk-2.12.defs: add more 2.12 API.

2007-07-21  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* examples/pygtk-demo/tooltip.py: Add new tooltip demo.
	
	* examples/pygtk-demo/builder.py
	* examples/pygtk-demo/demo.ui: moved and adapted for pygtk-demo.

2007-07-17  Gian Mario Tagliaretti  <gianmt@gnome.org>

	reviewed by: Johan, Fix bug #4457195

	* gtk/gtkbuilder.override: new file.

	* gtk/Makefile.am,
	* gtk/gtk.override: add gtkbuilder.override.

	* examples/builder/*: add new builder example.

2007-07-15  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gtk/gtk-2.12.defs: strip gtk_ prefix for new functions.

2007-07-14  Johan Dahlin  <jdahlin@async.com.br>

	* gtk/__init__.py: try/except around ltihooks.uninstall(),
	as suggested by Brad Schick at the pygtk mailing list

2007-07-12  Gian Mario Tagliaretti  <gianmt@gnome.org>
