@@ -88,6 +88,24 @@
   )
 )
 
+(define-method get_user_data
+  (of-object "PyGtkGenericTreeModel")
+  (c-name "pygtk_generic_tree_model_get_user_data")
+  (return-type "PyObject*")
+  (parameters
+    '("GtkTreeIter*" "iter")
+  )
+)
+
+(define-method create_tree_iter
+  (of-object "PyGtkGenericTreeModel")
+  (c-name "pygtk_generic_tree_model_create_tree_iter")
+  (return-type "GtkTreeIter")
+  (parameters
+    '("PyObject*" "user_data")
+  )
+)
+
 ;; PyGtkGenericCellRenderer
 
 (define-object GenericCellRenderer
