@@ -1,3 +1,8 @@
+2007-07-30  Paul Pogonyshev  <pogonyshev@gmx.net>
+
+	* pygtk-pygtkgenerictreemodel.xml: Document new create_tree_iter()
+	and get_user_data().
+
 2007-07-29  Gian Mario Tagliaretti  <gianmt@gnome.org>
 
 	* pygtk-gtkicontheme.xml: Update with 2.12 API.
