@@ -1,3 +1,15 @@
+2007-07-30  Paul Pogonyshev  <pogonyshev@gmx.net>
+
+	reviewed by: Johan, Fix bug #388754
+
+	* examples/gtk/customtreemodel.py: Add usage example.
+
+	* gtk/gtk-extrafuncs.defs (get_user_data, create_tree_iter): New
+	methods of `gtk.GenericTreeModel'.
+
+	* gtk/pygtktreemodel.c (pygtk_generic_tree_model_get_user_data)
+	(pygtk_generic_tree_model_create_tree_iter): New functions.
+
 2007-07-28  Gian Mario Tagliaretti  <gianmt@gnome.org>
 
 	reviewed by: gjc, Fix bug #461245
